// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test placeholder="placeholder#1" defaultValue=default width=default 1`] = `
<TextInput
  autoCompleteType="password"
  defaultValue=""
  onChangeText={[Function]}
  placeholder="placeholder#1"
  placeholderTextColor="#BFBDBD"
  secureTextEntry={true}
  style={
    Array [
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#CCCCCC",
        "color": "black",
        "fontFamily": "Roboto-Regular",
        "fontSize": 15,
        "fontStyle": "normal",
        "fontWeight": "normal",
        "height": 40,
      },
      Object {
        "width": "100%",
      },
    ]
  }
  textContentType="newPassword"
/>
`;

exports[`Test placeholder="placeholder#2" defaultValue="value#2" width=50 1`] = `
<TextInput
  autoCompleteType="password"
  defaultValue="value#2"
  onChangeText={[Function]}
  placeholder="placeholder#2"
  placeholderTextColor="#BFBDBD"
  secureTextEntry={true}
  style={
    Array [
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#CCCCCC",
        "color": "black",
        "fontFamily": "Roboto-Regular",
        "fontSize": 15,
        "fontStyle": "normal",
        "fontWeight": "normal",
        "height": 40,
      },
      Object {
        "width": "50%",
      },
    ]
  }
  textContentType="newPassword"
/>
`;
